# playlist_selection

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  EDA.md  LICENSE  README.md  alembic.ini  commands.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  main.yml  manual.yml  manual_stop.yml
app/: README.md  auth.py  config.py  constants.py  dependencies.py  dependency.py  exceptions.py  logging_config.yml  main.py  model.py  worker.py
app/api/: __init__.py  router.py
app/api/predict/: __init__.py  router.py
app/db/: __init__.py  init_db.py  models.py
app/static/: functions.js  style.css  style_v2.css
app/tasks/: __init__.py  predict.py
app/templates/: base.html  confirm_playlist.html  home.html  my.html  requests.html
app/web/: __init__.py  router.py
app/web/auth/: __init__.py  dao.py  handlers.py  router.py
app/web/generate/: __init__.py  router.py  utils.py
data/: tracks.txt
docker/: Dockerfile
docker/scripts/: init_db.sh  reload_db.sh
flask/: app.py  dependency.py  main.py
flask/templates/: base.html
migrations/postgres/: env.py
migrations/postgres/versions/: 2024_03_12_2013-210abb607a0d_initial_migration.py  2024_03_12_2058-328cf8380bc7_initial_migration.py  2024_03_12_2105-302be0f15b05_add_status_column_for_request.py  2024_03_12_2125-9cab6df657b5_add_status_column_for_request.py  2024_03_12_2132-f5ec1c5dba2d_add_association_table.py  2024_03_13_0912-e63fcefc9099_add_remove_song_id_from_playlist_table.py  2024_03_16_1030-90f6b4cf9953_ini_add_link_column.py  2024_03_16_1034-7645d8544c12_add_created_add_column_for_playlist.py  2024_03_16_1104-7cc1762bad6e_initial_migration.py  2024_03_16_2126-76edded3a5b6_initial.py  2024_03_17_1218-945061111b07_optional_user_uid.py  2024_03_17_1223-07007af97628_initial.py  2024_03_17_1527-64136856e403_type_of_spotify_id.py  2024_03_17_1716-051455260a4d_tinitial.py  2024_03_17_1728-c3b1a1cc9614_cascade.py
notebooks/: EDA_and_validate_audio_duration.ipynb  EDA_graphics.ipynb  api_description.ipynb  arcface_experiments.ipynb  audio_embeddings_2.ipynb  baseline_beta_and_metrics.ipynb  build_dataset.ipynb  downloader_example.ipynb  example.ipynb  metric_learning.ipynb  model_baseline.ipynb  track_by_genres.ipynb  validate_audio_duration.ipynb
playlist_selection/: __init__.py
playlist_selection/downloading/: __init__.py  downloader.py
playlist_selection/logger_config/: logging_config.yml
playlist_selection/logging_config/: __init__.py
playlist_selection/metrics/: __init__.py  metrics.py  utils.py
playlist_selection/models/: __init__.py  model.py
playlist_selection/parsing/: parser.py
playlist_selection/tracks/: __init__.py  audio.py  dataset.py  meta.py
presentations/: README.md
research/: README.md  train.py
research/configs/: train.yaml
research/configs/loss/: triplet.yaml
research/configs/mlflow/: default.yaml
research/configs/model/: fc.yaml
research/datasets/: __init__.py  miner.py  simple.py  utils.py
research/metrics/: similarity.py
research/models/: __init__.py  fc.py
src/: setup.py
src/downloading/: __init__.py  downloader.py
src/metrics/: __init__.py  metrics.py  utils.py
src/models/: model.py
src/parsing/: __init__.py  parser.py
src/tracks/: __init__.py  audio.py  constants.py  dataset.py  meta.py
tests/: __init__.py  conftest.py  test_app.py  test_simple.py
tests/test_data/: dataset_sample.csv  test_model.pkl
tests/unit/: conftest.py
tests/unit/app/: conftest.py
tests/unit/migrations/: conftest.py  test_migrations.py
tests/unit/test_app/: conftest.py  test_config.py
tests/unit/utils/: db.py
web/: app.py
