[project]
requires-python = ">=3.10"

[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Daniil Ganych <example@gmail.com>", "Nikita Saraev <example@gmail.com>", "Vyacheslav Kostrov <slavkostrov@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-select = [
  "E501",
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
extend-include = ["*.ipynb"]
extend-exclude = ["tests", "notebooks/api_description.ipynb"]
force-exclude = true

[tool.ruff.pydocstyle]
convention = "google"
