[project]
requires-python = ">=3.10,<3.13"

[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Daniil Ganych <example@gmail.com>", "Nikita Saraev <saraevnik0909@gmail.com>", "Vyacheslav Kostrov <slavkostrov@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.4.2"
spotipy = "^2.23.0"
numpy = "^1.26.1"
boto3 = "^1.28.73"
pyyaml = "^6.0.1"
pandas = "^2.1.2"
tqdm = "^4.66.1"
pytube = "^15.0.0"
mutagen = "^1.47.0"
pydub = "^0.25.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.1"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-select = [
  "E501",
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
extend-include = ["*.ipynb"]
extend-exclude = ["tests", "notebooks/api_description.ipynb", "notebooks/downloader_example.ipynb"]
force-exclude = true

[tool.ruff.pydocstyle]
convention = "google"
