[project]
requires-python = ">=3.10,<3.13"

[tool.poetry]
name = "playlist-selection"
version = "0.1.0"
description = ""
authors = ["Daniil Ganych <danganych@gmail.com>", "Nikita Saraev <saraevnik0909@gmail.com>", "Vyacheslav Kostrov <slavkostrov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "playlist_selection" },
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.4.2"
spotipy = "^2.23.0"
numpy = "^1.26.1"
boto3 = "^1.28.73"
pyyaml = "^6.0.1"
pandas = "^2.1.2"
pytube = "^15.0.0"
loguru = "^0.7.2"
flask = "^3.0.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
redis = "^5.0.1"
isort = "^5.12.0"
tqdm = "^4.66.1"
joblib = "^1.3.2"
scikit-learn = "^1.3.2"
orjson = "^3.9.10"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
alembic-postgresql-enum = "^1.1.2"
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.1"
ipykernel = "^6.26.0"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
mutagen = "^1.47.0"
pydub = "^0.25.1"

[tool.poetry.group.research.dependencies]
torch = "^2.2.1"
pytorch-metric-learning = "^2.4.1"
lightning = "^2.2.0.post0"
hydra-core = "^1.3.2"
mlflow = "^2.10.2"
fire = "^0.5.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-select = [
  "E501",
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "I",   # isort
]
# extend-include = ["*.ipynb"]
extend-exclude = ["tests", "research", "notebooks", "migrations"]
force-exclude = true

[tool.ruff.pydocstyle]
convention = "google"
